@@ -1,0 +1,3 @@
+Site URL: https://www.erome.com/
+Contact: contact@erome.com 
+DMCA : https://www.erome.com/s/report
