@@ -3,3 +3,5 @@ favorites - move up/down/top/bottom disabled when favorites list is sorted
 favorites - video list refresh disabled on add
 Paradisehill - fix videoplayback
 FamilyPornHD - fix videoplayback
+sextb - fix listing and playback on LE/CE
+erome - New site
